# fortxxi-test

./: CMakeLists.txt
receiver/: CMakeLists.txt  receiverwindow.cpp  receiverwindow.h
sender/: CMakeLists.txt  main.c  proc_stat.c  proc_stat.h
